// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render with many props assigned 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchor anchorMargin"
    id=""
  />
  <div
    className="hashLinkContainer"
  >
    <a
      data-testid="Hash Link"
      href="#"
    >
      <svg
        className="icon"
      />
      <span
        className="ScreenReaderOnly"
      >
        Scroll Link
      </span>
    </a>
  </div>
  <h2
    className="headingTextWithLinkIconOffset Heading secondary"
    id="test-heading-1"
  />
</div>
`;

exports[`Heading should render with required props 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchor anchorMargin"
    id="test"
  />
  <a
    className="hashLink"
    data-testid="Hash Link"
    href="#test"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="ScreenReaderOnly"
    >
      Hashlink icon hidden
    </span>
    <svg
      className="icon iconHidden"
    />
  </a>
  <h2
    className="headingTextWithLinkIconOffset Heading secondary"
    id=""
  >
    Test
  </h2>
</div>
`;
